# Parser

./: .env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh
src/parcer/: .env.example  main.py  rules.py
src/parcer/alembic/: env.py
src/parcer/alembic/versions/: 00f2bf1e37fb_add_active_col.py  3d6de23e651f_autopart_table.py  f18805b2bd80_init.py
src/parcer/core/: __init__.py  config.py
src/parcer/models/: __init__.py  auto_part.py
src/parcer/models/mixins/: id_mixin.py
src/parcer/routers/: coomand.py  data.py  router.py
src/parcer/utils/: __init__.py  database_helper.py  exsel_parser.py  mapper.py  product_categorize.py  upload.py
src/parser/: __init__.py  main.py  matcher.py
src/parser/alembic/: env.py
src/parser/alembic/versions/: 00f2bf1e37fb_add_active_col.py
src/parser/models/: base.py
src/parser/models/mixins/: __init__.py
src/parser/routers/: __init__.py  data.py  router.py
src/parser/utils/: database_helper.py  exsel_parser.py  product_categorize.py  upload.py
