[project]
name = "parcer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WinerTy", email = "nikitokmay@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
