[project]
name = "parcer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WinerTy", email = "nikitokmay@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pymorphy3>=2.0.3",
    "pymysql>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "ruff>=0.11.10",
]
